@@ -208,6 +208,7 @@ Version 1.5
  - Issue #1405 - add ZW6302 Portable Smart Motion Sensor from jkavenaugh (Nechry)
  - Pull Request #1365 Added Vision ZL7431 - Single Relay Switch from belyalov (Nechry)
  - Add Everspring Outdoor Motion Detector SP816 (Nechry)
+ - Add Coolcam SOS Remote Key-Fob RC01Z (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
